--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "phaser": "^3.70.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "file-loader": "^6.2.0",
+    "css-loader": "^6.7.3",
+    "nodemon": "^2.0.22",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack-node-externals": "^3.0.0"
+  },
+  "scripts": {
+    "watch": "webpack --watch",
+    "build": "webpack",
+    "serve": "nodemon src/app-server.js",
+    "serve:inspect": "nodemon --inspect src/app-server.js",
+    "run": "node src/app-server.js",
+    "deploy": "git pull && npm i && webpack && node src/app-server.js"
   }
 }
